--- a/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
+++ b/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
@@ -31,7 +31,7 @@
             <div class="bottomLine">
               <div class="sponsor-listing">
                 <div *ngFor="let sponsor of currentSponsors">
-                  <img class="sponsor-container" src="{{sponsor.img}}" alt="Logo + {{sponsor.name}}"/>
+                  <img class="sponsor-container" src="{{sponsor.img}}" alt="Logo {{sponsor.name}}"/>
                 </div>
               </div>
             </div>
