--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -60,8 +60,8 @@
       <!-- Language toggle button -->
       <li class="nav-item">
         <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style">
-          <mat-button-toggle class="es-en-button" value="es" checked=true (click)="useLanguage('es')">es</mat-button-toggle>
-          <mat-button-toggle class="es-en-button" value="en" (click)="useLanguage('en')">en</mat-button-toggle>
+          <mat-button-toggle class="es-en-button" value="es" checked="{{ hasSpanishLanguage() }}" (click)="useLanguage('es')">es</mat-button-toggle>
+          <mat-button-toggle class="es-en-button" value="en" checked="{{ hasEnglishLanguage() }}" (click)="useLanguage('en')">en</mat-button-toggle>
         </mat-button-toggle-group>
       </li>
       <!-- Dropdown -->
