feat: add about us page

--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
@@ -51,7 +51,7 @@
         </div>
       </div>
     <div class="end-button-container">
-      <button class="learn-more-button" [routerLink]="['/aboutus']">{{ 'HOME.ABOUTUS.LEARNMORE' | translate }} <mdb-icon
+      <button class="learn-more-button" [routerLink]="['/about-us']">{{ 'HOME.ABOUTUS.LEARNMORE' | translate }} <mdb-icon
         fas
         icon="chevron-right"
         class="waves-light"
