--- a/src/app/modules/about-us/pages/about-us/about-us.component.html
+++ b/src/app/modules/about-us/pages/about-us/about-us.component.html
@@ -26,42 +26,37 @@
           </div>
         </div>
       </div>
-      <div class="container">
-        <div class="greyBottomLine">
-          <div class="add-space">
-            <h1 class="word-break section-title-text">
-              {{ "ABOUT-US.WHO-WE-ARE.TITLE" | translate }}
-            </h1>
-            <div class="word-break description-text">
-              {{ "ABOUT-US.WHO-WE-ARE.DESC" | translate }}
+      <mat-tab-group mat-align-tabs="center">
+        <mat-tab label='{{ "ABOUT-US.WHO-WE-ARE.TITLE" | translate }}'>
+          <div class="section-container white-background">
+            <div class="word-break description-text description-text-container">
+              <h1 class="description-text-title">{{ "ABOUT-US.WHO-WE-ARE.TITLE" | translate }}</h1>
+              <div>{{ "ABOUT-US.WHO-WE-ARE.DESC" | translate }}</div>
             </div>
+            <img class="section-image" src="../../../../../assets/image/IEEE-Logo.svg" alt="Imagen nosotros"/>
           </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="greyBottomLine">
-          <div class="add-space">
-            <h1 class="word-break section-title-text">
-              {{ "ABOUT-US.WHAT-IS-IEEE.TITLE" | translate }}
-            </h1>
-            <div class="word-break description-text">
-              {{ "ABOUT-US.WHAT-IS-IEEE.DESC" | translate }}
+        </mat-tab>
+        <mat-tab label='{{ "ABOUT-US.WHAT-IS-IEEE.TITLE" | translate }}'>
+          <div class="section-container white-background">
+            <div class="word-break description-text description-text-container">
+              <h1 class="description-text-title">{{ "ABOUT-US.WHAT-IS-IEEE.TITLE" | translate }}</h1>
+              <div>{{ "ABOUT-US.WHAT-IS-IEEE.DESC" | translate }}</div>
             </div>
+            <img class="section-image" src="../../../../../assets/image/logos/ieee.png" alt="Imagen IEEE"/>
           </div>
-        </div>
-      </div>
-      <div class="bottomLine">
-        <div class="container">
-          <div class="add-space">
-            <h1 class="word-break section-title-text">
-              {{ "ABOUT-US.WHAT-IS-ITBA.TITLE" | translate }}
-            </h1>
-            <div class="word-break description-text">
-              {{ "ABOUT-US.WHAT-IS-ITBA.DESC" | translate }}
+        </mat-tab>
+        <mat-tab class="section-container" label='{{ "ABOUT-US.WHAT-IS-ITBA.TITLE" | translate }}'>
+          <div class="section-container white-background">
+            <div class="word-break description-text description-text-container">
+              <h1 class="description-text-title">{{ "ABOUT-US.WHAT-IS-ITBA.TITLE" | translate }}</h1>
+              <div>{{ "ABOUT-US.WHAT-IS-ITBA.DESC" | translate }}</div>
             </div>
+            <img class="section-image" src="../../../../../assets/image/logos/itba.png" alt="Imagen ITBA"/>
           </div>
-        </div>
-      </div>
+        </mat-tab>
+      </mat-tab-group>
+      <button class="learn-more-button" [routerLink]="['/contact']">Contact us</button>
+      <button class="learn-more-button" [routerLink]="['/team']">Our team</button>
     </section>
 
     <app-footer></app-footer>
