--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
@@ -135,7 +135,7 @@ body {
 }
 
 .gray-background {
-    background-color: #eeeeee;
+    background-color: #E6E6E6;
 }
 
 .aboutus-container {
@@ -172,7 +172,7 @@ body {
 
 .end-button-container {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .learn-more-button {
@@ -300,4 +300,24 @@ h2{
   background-color: #007aff;
   --swiper-navigation-color: #f0f0f0;
   border-radius: 25% 45% 45% 25%;
+}
+
+/* Adds respónsiveness to screen:
+   - < 800px: items in column
+   - >= 800px: items in rows
+*/
+@media (max-width: 991px){
+  .aboutus-container {
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+  }
+
+  .aboutus-section {
+      width: 75%;
+  }
+
+  .section-divider {
+      height: 2px;
+  }
 }
