--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -36,6 +36,11 @@
         <button mat-menu-item onclick="window.location.href = 'https://wie-itba.github.io/'">WIE</button>
       </mat-menu>
       <li class="nav-item">
+        <button [routerLink]="['/about-us']" class="buttonNavbar" type="button">{{ 'NAVBAR.ABOUTUS' |
+          translate
+          }}</button>
+      </li>
+      <li class="nav-item">
         <button [routerLink]="['/contact']" class="buttonNavbar" type="button">{{ 'NAVBAR.CONTACT' |
           translate
           }}</button>
