feat: add news pagination + resized page icons

--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
@@ -73,7 +73,8 @@ body {
 
 .section-header-logo {
     object-fit: scale-down;
-    height: 4rem;
+    height: 64px;
+    width: 64px;
 }
 
 .section-header-start-line {
