--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 
   <!-- Navbar brand -->
   <mdb-navbar-brand><a class="navbar-brand" [routerLink]="['']"><img
-        src="https://i.ibb.co/qRDPTRx/IEEE-Logo-No-Text-Darkest.png" height="60vmin" alt="Icon IEEE-ITBA"></a>
+        src="../../../../assets/image/small-logos/IEEE-Logo-No-Text-Darkest-small.png" height="60vmin" alt="Icon IEEE-ITBA"></a>
   </mdb-navbar-brand>
 
   <!-- All Items -->
