--- a/src/app/modules/noticias/pages/noticias/noticias.component.css
+++ b/src/app/modules/noticias/pages/noticias/noticias.component.css
@@ -368,6 +368,53 @@ background-size: cover;
     position: relative;
     top: 50%;
 }
+
+.pagination-controller {
+    margin: 2rem 0;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    font-size: x-large;
+    font-weight: lighter;
+}
+
+.page-button {
+    text-align: center;
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
+    background-color: white;
+    color: #04629a;
+    border: 0;
+}
+
+.page-button:disabled {
+    text-align: center;
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
+    background-color: #04629a;
+    color: white;
+    border: 0;
+}
+
+.page-change-button {
+    background-color: white;
+    border: 0;
+}
+
+.page-change-button:hover {
+    opacity: 150%;
+}
+
+.page-change-button-image {
+    height: 45px;
+    width: 45px;
+}
+
 @media (min-width: 768px) {
 
 	.flexText{
