--- a/src/app/modules/noticias/pages/noticias/noticias.component.html
+++ b/src/app/modules/noticias/pages/noticias/noticias.component.html
@@ -13,12 +13,11 @@
 <body>
 
     <div class="body" >
-
         <div class="topbottomLine pt-2 pb-2 mb-4" id="home">
             <div class="container">
                 <div class="row">
                     <div class="col-md-5 col-sm-12 pt-1 pb-1 flexImage" >
-                        <img src="../../../../../assets/image/IEEENews_sin_fondo.png" alt="News" class="IEEENoticiasImage">
+                        <img src="../../../../../assets/image/small-logos/IEEENews_sin_fondo-small.png" alt="News" class="IEEENoticiasImage">
                     </div>
                     <div class="col-md-7 col-sm-12 pt-1 pb-1 flexText" >
                         <h1 class="page-title">{{ 'NAVBAR.NEWS' | translate }}</h1>
@@ -31,9 +30,6 @@
             <app-loading-spinner></app-loading-spinner>
         </div>
 
-        <div class="spacenav">
-        </div>
-
         <div class="row news-grid">
             <div *ngFor="let noticia of newsData">
                 <div class="col-sm margin-top">
@@ -41,9 +37,26 @@
                 </div>
             </div>
         </div>
-        <div class="addMargin">
-
+        <div class="pagination-controller">
+          <div *ngIf="hasPrevPage(); else disabledPrev">
+            <button class="page-change-button" (click)="prevPage()">
+              <img class="page-change-button-image" src="../../../../../assets/image/logos/left-arrow.svg" alt="Previous page icon"/>
+            </button>
+          </div>
+          <ng-template #disabledPrev>
+            <img class="page-change-button-image" src="../../../../../assets/image/logos/left-arrow-disabled.svg" alt="Previous page icon"/>
+          </ng-template>
+          <button class="page-button" *ngFor="let page of [1, 2, 3, 4]" [disabled]="currentPage === page" >{{ page }}</button>
+          <div *ngIf="hasNextPage(); else disabledNext">
+            <button class="page-change-button" (click)="nextPage()">
+              <img class="page-change-button-image" src="../../../../../assets/image/logos/right-arrow.svg" alt="Next page icon"/>
+            </button>
+          </div>
+          <ng-template #disabledNext>
+            <img class="page-change-button-image" src="../../../../../assets/image/logos/right-arrow-disabled.svg" alt="Next page icon"/>
+          </ng-template>
         </div>
+
         <app-footer></app-footer>
     </div>
 </body>
