--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -33,6 +33,17 @@
   </div>
 </div>
 
+<br>
+<div>
+  <div class="d-flex flex-row-reverse">
+    <a href="https://forms.gle/SHhy6eeTMhnh5YL36" target="_blank" class="button-text">
+      <button class="goback-button">
+        {{ 'DATAANALYSIS.TESTBUTTON' | translate }}
+      </button>
+    </a>
+  </div>
+</div>
+
 <!-- Introductory text -->
 <div>
   <h2 class="course-subtitle">{{ 'DATAANALYSIS.DESC_TITLE' | translate }}</h2>
