--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -33,7 +33,20 @@
   </div>
 </div>
 
+<div>
+  <div class="d-flex flex-row-reverse">
+    <div *ngIf="hasTestsAvailable()">
+      <a href="{{ getCurrentTest() }}" target="_blank" class="button-text">
+        <button class="goback-button">
+          {{ 'DATAANALYSIS.TESTBUTTON' | translate }}
+        </button>
+      </a>
+    </div>
+  </div>
+</div>
+
 <!-- Introductory text -->
+<br>
 <div>
   <h2 class="course-subtitle">{{ 'DATAANALYSIS.DESC_TITLE' | translate }}</h2>
   <p>{{ 'DATAANALYSIS.DESC' | translate }}</p>
