--- a/src/app/modules/noticias/pages/noticias/noticias.component.html
+++ b/src/app/modules/noticias/pages/noticias/noticias.component.html
@@ -37,24 +37,17 @@
                 </div>
             </div>
         </div>
-        <div class="pagination-controller">
-          <div *ngIf="hasPrevPage(); else disabledPrev">
-            <button class="page-change-button" (click)="prevPage()">
+
+        <div *ngIf="!showLoadingSpinner">
+          <div class="pagination-controller">
+            <button class="page-change-button page-change-button-left" (click)="prevPage()" [disabled]="!hasPrevPage()">
               <img class="page-change-button-image" src="../../../../../assets/image/logos/left-arrow.svg" alt="Previous page icon"/>
             </button>
-          </div>
-          <ng-template #disabledPrev>
-            <img class="page-change-button-image" src="../../../../../assets/image/logos/left-arrow-disabled.svg" alt="Previous page icon"/>
-          </ng-template>
-          <button class="page-button" *ngFor="let page of [1, 2, 3, 4]" [disabled]="currentPage === page" >{{ page }}</button>
-          <div *ngIf="hasNextPage(); else disabledNext">
-            <button class="page-change-button" (click)="nextPage()">
-              <img class="page-change-button-image" src="../../../../../assets/image/logos/right-arrow.svg" alt="Next page icon"/>
+            <span>{{this.currentPage}} de {{this.pageCount}}</span>
+            <button class="page-change-button page-change-button-right" (click)="nextPage()" [disabled]="!hasNextPage()">
+              <img class="page-change-button-image" src="../../../../../assets/image/logos/right-arrow.svg" alt="Previous page icon"/>
             </button>
           </div>
-          <ng-template #disabledNext>
-            <img class="page-change-button-image" src="../../../../../assets/image/logos/right-arrow-disabled.svg" alt="Next page icon"/>
-          </ng-template>
         </div>
 
         <app-footer></app-footer>
