--- a/src/app/modules/noticias/pages/noticias/noticias.component.html
+++ b/src/app/modules/noticias/pages/noticias/noticias.component.html
@@ -43,7 +43,7 @@
             <button class="page-change-button page-change-button-left" (click)="prevPage()" [disabled]="!hasPrevPage()">
               <img class="page-change-button-image" src="../../../../../assets/image/logos/left-arrow.svg" alt="Previous page icon"/>
             </button>
-            <span>{{this.currentPage}} de {{this.pageCount}}</span>
+            <span>{{this.currentPage}} {{ 'NEWS.OF' | translate }} {{this.pageCount}}</span>
             <button class="page-change-button page-change-button-right" (click)="nextPage()" [disabled]="!hasNextPage()">
               <img class="page-change-button-image" src="../../../../../assets/image/logos/right-arrow.svg" alt="Previous page icon"/>
             </button>
