--- a/src/app/modules/about-us/pages/about-us/about-us.component.html
+++ b/src/app/modules/about-us/pages/about-us/about-us.component.html
@@ -33,7 +33,7 @@
               <h1 class="description-text-title">{{ "ABOUT-US.WHO-WE-ARE.TITLE" | translate }}</h1>
               <div>{{ "ABOUT-US.WHO-WE-ARE.DESC" | translate }}</div>
             </div>
-            <img class="section-image" src="../../../../../assets/image/IEEE-Logo.svg" alt="Imagen nosotros"/>
+            <img class="section-image" src="../../../../assets/image/logos/ieee-itba.png" alt="Imagen nosotros"/>
           </div>
         </mat-tab>
         <mat-tab label='{{ "ABOUT-US.WHAT-IS-IEEE.TITLE" | translate }}'>
