chore: resized multiple images + fixed some errors

--- a/src/app/modules/about-us/pages/about-us/about-us.component.html
+++ b/src/app/modules/about-us/pages/about-us/about-us.component.html
@@ -33,7 +33,7 @@
               <h1 class="description-text-title">{{ "ABOUT-US.WHO-WE-ARE.TITLE" | translate }}</h1>
               <div>{{ "ABOUT-US.WHO-WE-ARE.DESC" | translate }}</div>
             </div>
-            <img class="section-image" src="../../../../assets/image/logos/ieee-itba.png" alt="Imagen nosotros"/>
+            <img class="section-image" src="../../../../../assets/image/general-icons/ieee-itba.png" alt="Imagen nosotros"/>
           </div>
         </mat-tab>
         <mat-tab label='{{ "ABOUT-US.WHAT-IS-IEEE.TITLE" | translate }}'>
@@ -42,7 +42,7 @@
               <h1 class="description-text-title">{{ "ABOUT-US.WHAT-IS-IEEE.TITLE" | translate }}</h1>
               <div>{{ "ABOUT-US.WHAT-IS-IEEE.DESC" | translate }}</div>
             </div>
-            <img class="section-image" src="../../../../../assets/image/logos/ieee.png" alt="Imagen IEEE"/>
+            <img class="section-image" src="../../../../../assets/image/general-icons/ieee.png" alt="Imagen IEEE"/>
           </div>
         </mat-tab>
         <mat-tab class="section-container" label='{{ "ABOUT-US.WHAT-IS-ITBA.TITLE" | translate }}'>
@@ -51,7 +51,7 @@
               <h1 class="description-text-title">{{ "ABOUT-US.WHAT-IS-ITBA.TITLE" | translate }}</h1>
               <div>{{ "ABOUT-US.WHAT-IS-ITBA.DESC" | translate }}</div>
             </div>
-            <img class="section-image" src="../../../../../assets/image/logos/itba.png" alt="Imagen ITBA"/>
+            <img class="section-image" src="../../../../../assets/image/general-icons/itba.png" alt="Imagen ITBA"/>
           </div>
         </mat-tab>
       </mat-tab-group>
