--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
@@ -13,7 +13,7 @@
     <!-- BANNER -->
     <div class="banner">
       <img
-        src="../../../../../assets/image/courses/asimov-cup-banner.png"
+        src="../../../../../assets/image/events/asimov-cup/asimov-cup-banner.png"
         class="max-width"
         alt="Asimov Cup - Competencia de Robótica"
       />
@@ -74,11 +74,11 @@
             "ASIMOVCUP.D_AND_L.LOCATION" | translate
           }}</a>
           {{ "ASIMOVCUP.D_AND_L.TEXT_2" | translate }}
-        </p> 
+        </p>
       </div>
       <div class="image-section">
         <img
-          src="../../../../../assets/image/content/PlanoITBA2.png"
+          src="../../../../../assets/image/events/asimov-cup/PlanoITBA2.png"
           alt="PlanoITBA2"
         />
       </div>
@@ -118,7 +118,7 @@
     <div class="sponsor-section" id="sponsorship">
       <h2 class="subtitle">{{ "ASIMOVCUP.SPONSORS" | translate }}</h2>
       <img
-        src="../../../../../assets/image/content/Schneider Logo.png"
+        src="../../../../../assets/image/sponsors/Schneider%20Logo.png"
         height="65vmin"
         alt="Logo Schneider Electric"
       />
