--- a/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
+++ b/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 col-sm-12 pt-1 pb-1 flexImage" >
-                  <img src="../../../../../assets/image/small-logos/IEEESponsors-small.png" alt="Sponsors" class="IEEESponsorsImage">
+                  <img src="../../../../../assets/image/section-icons/IEEESponsors-small.png" alt="Sponsors" class="IEEESponsorsImage">
                 </div>
                 <div class="col-md-7 col-sm-12 pt-1 pb-1 flexText" >
                   <h1 class="page-title">{{ 'NAVBAR.SPONSORS' | translate }}</h1>
@@ -26,7 +26,7 @@
         </div>
       </div>
 
-    <mat-tab-group class="mt-5 group-margin">
+    <mat-tab-group class="mt-3" mat-align-tabs="center">
         <mat-tab label="{{ 'GENERAL.ACTUAL' | translate }}">
             <div class="bottomLine">
               <div class="sponsor-listing">
@@ -94,25 +94,25 @@
                 <div class="container">
                     <div class="row" style="margin-top: 2vmin;">
                         <div class="col-sm">
-                            <img src="../../../../../assets/image/content/jpmorgan.png" height="60vmin" alt="Logo Innovid"
+                            <img src="../../../../../assets/image/sponsors/jpmorgan.png" height="60vmin" alt="Logo Innovid"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="../../../../../assets/image/content/innovid.png" height="30vmin" alt="Logo Avature"
+                            <img src="../../../../../assets/image/sponsors/innovid.png" height="30vmin" alt="Logo Avature"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="../../../../../assets/image/content/eiwa.png" height="85vmin" alt="Logo Eiwa"
+                            <img src="../../../../../assets/image/sponsors/eiwa.png" height="85vmin" alt="Logo Eiwa"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="../../../../../assets/image/content/inclusion-2.png" height="40vmin" alt="Logo Inclusion"
+                            <img src="../../../../../assets/image/sponsors/inclusion-2.png" height="40vmin" alt="Logo Inclusion"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                     </div>
                     <div class="row" style="margin-top: 2vmin;">
                         <div class="col-sm">
-                            <img src="../../../../../assets/image/content/mulesoft.png" height="50vmin" alt="Logo Mulesoft"
+                            <img src="../../../../../assets/image/sponsors/mulesoft.png" height="50vmin" alt="Logo Mulesoft"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                       <!--
@@ -122,29 +122,29 @@
                         </div>
                         -->
                       <div class="col-sm mt-5 mt-md-4">
-                        <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
+                        <img src="../../../../../assets/image/sponsors/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
                              style="position: relative; top: 50%; transform: translateY(-50%); ">
                       </div>
                         <div class="col-sm">
-                            <img src="../../../../../assets/image/content/tgs.png" height="60vmin" alt="Logo TGS"
+                            <img src="../../../../../assets/image/sponsors/tgs.png" height="60vmin" alt="Logo TGS"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="../../../../../assets/image/content/pampa.png" height="50vmin" alt="Logo Pampa"
+                            <img src="../../../../../assets/image/sponsors/pampa.png" height="50vmin" alt="Logo Pampa"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                     </div>
                     <div class="row mt-4">
                         <div class="col-sm">
-                            <img src="../../../../../assets/image/content/unify.png" height="30vmin" alt="Logo Unify"
+                            <img src="../../../../../assets/image/sponsors/unify.png" height="30vmin" alt="Logo Unify"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                       <div class="col-sm mt-5 mt-md-4">
-                        <img src="../../../../../assets/image/content/pan-american-energy.png" height="100vmin" alt="Logo Axion Energy"
+                        <img src="../../../../../assets/image/sponsors/pan-american-energy.png" height="100vmin" alt="Logo Axion Energy"
                              style="position: relative; top: 50%; transform: translateY(-50%);">
                       </div>
                       <div class="col-sm mt-5 mt-md-4">
-                        <img src="../../../../../assets/image/content/axion-energy.png" height="100vmin" alt="Logo Axion Energy"
+                        <img src="../../../../../assets/image/sponsors/axion-energy.png" height="100vmin" alt="Logo Axion Energy"
                              style="position: relative; top: 50%; transform: translateY(-50%);">
                       </div>
                     </div>
