--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
@@ -11,7 +11,7 @@
     <app-navbar></app-navbar>
     <div class="banner">
       <img
-        src="../../../../../assets/image/banner6.jpg"
+        src="../../../../../assets/image/general-icons/banner6.jpg"
         alt="IEEE ITBA"
         class="max-width"
       />
@@ -26,7 +26,7 @@
     <div class="section-header">
       <div class="section-header-start-line"></div>
       <div class="section-header-content">
-        <img class="section-header-logo" src="../../../../../assets/image/small-logos/IEEETeams-small.png" alt="Logo"/>
+        <img class="section-header-logo" src="../../../../../assets/image/section-icons/IEEETeams-small.png" alt="Logo"/>
         <h1 class="section-title">{{ 'HOME.ABOUTUS.TITLE' | translate }}</h1>
       </div>
       <div class="section-header-end-line"></div>
@@ -66,7 +66,7 @@
       <div class="section-header">
         <div class="section-header-start-line"></div>
         <div class="section-header-content">
-          <img class="section-header-logo" src="../../../../../assets/image/small-logos/IEEENews_sin_fondo-small.png" alt="Logo"/>
+          <img class="section-header-logo" src="../../../../../assets/image/section-icons/IEEENews_sin_fondo.png" alt="Logo"/>
           <h1 class="section-title">{{ 'HOME.IEEENEWS.TITLE' | translate }}</h1>
         </div>
         <div class="section-header-end-line"></div>
@@ -110,7 +110,7 @@
       <div class="section-header">
         <div class="section-header-start-line"></div>
         <div class="section-header-content">
-          <img class="section-header-logo" src="../../../../../assets/image/small-logos/IEEESponsors-small.png" alt="Logo"/>
+          <img class="section-header-logo" src="../../../../../assets/image/section-icons/IEEESponsors-small.png" alt="Logo"/>
           <h1 class="section-title">{{ "HOME.SPONSORS" | translate }}</h1>
         </div>
         <div class="section-header-end-line"></div>
