--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
@@ -21,6 +21,7 @@ body {
     border-bottom: whitesmoke 2px solid;
     vertical-align: middle;
     align-content: center;
+    margin: auto;
 }
 
 .news-container {
