--- a/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
+++ b/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
@@ -29,126 +29,13 @@
     <mat-tab-group class="mt-3" mat-align-tabs="center">
         <mat-tab label="{{ 'GENERAL.ACTUAL' | translate }}">
             <div class="bottomLine">
-              <div class="sponsor-listing">
-                <div *ngFor="let sponsor of currentSponsors">
-                  <img class="sponsor-container" src="{{sponsor.img}}" alt="Logo {{sponsor.name}}"/>
-                </div>
-              </div>
+                <app-sponsor-component [currentsponsor]="sponsorsServiceVar.getCurrentSponsors()"></app-sponsor-component>
             </div>
         </mat-tab>
-      <!--
-        <mat-tab label="2021">
-            <div class="bottomLine">
-                <div class="container">
-                    <div class="row" style="margin-top: 2vmin;">
-                        <div class="col-sm mt-5 mt-md-2">
-                            <img src="../../../../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo jpmorgan"
-                                 style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
-                        <div class="col-sm mt-5 mt-md-2">
-                            <img src="../../../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
-                                 style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm mt-5 mt-md-4">
-                            <img src="../../../../../assets/image/content/pan-american-energy.png" height="100vmin" alt="Logo Axion Energy"
-                                 style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
-                        <div class="col-sm mt-5 mt-md-4">
-                            <img src="../../../../../assets/image/content/axion-energy.png" height="100vmin" alt="Logo Axion Energy"
-                                 style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
-                        <div class="col-sm mt-5 mt-md-4">
-                            <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
-                                 style="position: relative; top: 50%; transform: translateY(-50%); ">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </mat-tab>
-        <mat-tab label="2020">
-            <div class="bottomLine">
-                <div class="container">
-                    <div class="row" style="margin-top: 2vmin;">
-                        <div class="col-sm">
-                            <img src="../../../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
-                                 style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
-                        <div class="col-sm">
-                            <img src="../../../../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo jpmorgan"
-                                 style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
-                        <div class="col-sm">
-                            <img src="../../../../../assets/image/content/eiwa.png" height="85vmin" alt="Logo Eiwa"
-                                 style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
 
-                    </div>
-                </div>
-            </div>
-        </mat-tab>
-        -->
         <mat-tab label="{{ 'GENERAL.PREVIOUS' | translate }}">
             <div class="bottomLine">
-                <div class="container">
-                    <div class="row" style="margin-top: 2vmin;">
-                        <div class="col-sm">
-                            <img src="../../../../../assets/image/sponsors/jpmorgan.png" height="60vmin" alt="Logo Innovid"
-                                 style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
-                        <div class="col-sm">
-                            <img src="../../../../../assets/image/sponsors/innovid.png" height="30vmin" alt="Logo Avature"
-                                 style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
-                        <div class="col-sm">
-                            <img src="../../../../../assets/image/sponsors/eiwa.png" height="85vmin" alt="Logo Eiwa"
-                                 style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
-                        <div class="col-sm">
-                            <img src="../../../../../assets/image/sponsors/inclusion-2.png" height="40vmin" alt="Logo Inclusion"
-                                 style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
-                    </div>
-                    <div class="row" style="margin-top: 2vmin;">
-                        <div class="col-sm">
-                            <img src="../../../../../assets/image/sponsors/mulesoft.png" height="50vmin" alt="Logo Mulesoft"
-                                 style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
-                      <!--
-                        <div class="col-sm">
-                            <img src="../../../../../assets/image/content/flowics.png" height="45vmin" alt="Logo Flowics"
-                                 style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
-                        -->
-                      <div class="col-sm mt-5 mt-md-4">
-                        <img src="../../../../../assets/image/sponsors/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
-                             style="position: relative; top: 50%; transform: translateY(-50%); ">
-                      </div>
-                        <div class="col-sm">
-                            <img src="../../../../../assets/image/sponsors/tgs.png" height="60vmin" alt="Logo TGS"
-                                 style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
-                        <div class="col-sm">
-                            <img src="../../../../../assets/image/sponsors/pampa.png" height="50vmin" alt="Logo Pampa"
-                                 style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
-                    </div>
-                    <div class="row mt-4">
-                        <div class="col-sm">
-                            <img src="../../../../../assets/image/sponsors/unify.png" height="30vmin" alt="Logo Unify"
-                                 style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
-                      <div class="col-sm mt-5 mt-md-4">
-                        <img src="../../../../../assets/image/sponsors/pan-american-energy.png" height="100vmin" alt="Logo Axion Energy"
-                             style="position: relative; top: 50%; transform: translateY(-50%);">
-                      </div>
-                      <div class="col-sm mt-5 mt-md-4">
-                        <img src="../../../../../assets/image/sponsors/axion-energy.png" height="100vmin" alt="Logo Axion Energy"
-                             style="position: relative; top: 50%; transform: translateY(-50%);">
-                      </div>
-                    </div>
-                </div>
+                <app-sponsor-component [currentsponsor]="sponsorsServiceVar.getPreviousSponsors()"></app-sponsor-component>
             </div>
         </mat-tab>
     </mat-tab-group>
