IEEE-Fix-CardsWidth

--- a/src/app/modules/noticias/pages/noticias/noticias.component.css
+++ b/src/app/modules/noticias/pages/noticias/noticias.component.css
@@ -42,7 +42,7 @@ body {
 
 .news-grid{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 507.81px));
     grid-gap: 0.5rem;
 }
 
