chore: add iot page linking in router + styling on asimov cup page

--- a/src/app/modules/curso-python/pages/curso-python/curso-python.component.html
+++ b/src/app/modules/curso-python/pages/curso-python/curso-python.component.html
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <div>
+    <div *ngIf="enrollAvailable()">
         <div class="d-flex flex-row-reverse">
             <button class="goback-button">
                 <a href="{{ enrollLink }}" class="button-text">
