feat(teams): add ras team + updated commissions

--- a/src/app/modules/ras/pages/ras/ras.component.html
+++ b/src/app/modules/ras/pages/ras/ras.component.html
@@ -49,6 +49,9 @@
         <h2 class="section-title">{{ "RAS.ABOUTRAS.TITLE" | translate }}</h2>
         <p class="page-paragraph">{{ "RAS.ABOUTRAS.CONTENT1" | translate }}</p>
         <p class="page-paragraph">{{ "RAS.ABOUTRAS.CONTENT2" | translate }}</p>
+        <hr>
+        <h2 class="section-title">{{ "RAS.TEAM.TITLE" | translate}}</h2>
+        <app-team-card [team]="team.team"></app-team-card>
       </div>
     </div>
   </body>
