--- a/src/app/modules/emb/page/emb/emb.component.html
+++ b/src/app/modules/emb/page/emb/emb.component.html
@@ -24,8 +24,6 @@
       </div>
       <hr>
 
-
-
       <div class="text-container">
         <h2 class="section-title">{{ "EMB.OBJECTIVES.TITLE" | translate}}</h2>
         <p class="page-paragraph">{{ "EMB.OBJECTIVES.CONTENT" | translate }}</p>
@@ -38,10 +36,12 @@
         <hr>
         <h2 class="section-title">{{ "EMB.ABOUTEMB.TITLE" | translate }}</h2>
         <p class="page-paragraph">{{ "EMB.ABOUTEMB.CONTENT1" | translate }}</p>
+
+        <p class="page-paragraph">{{ "EMB.ABOUTEMB.CONTENT2" | translate }}</p>
         <hr>
-
+        
       </div>
-
+    
     </div>
   </body>
   <app-footer></app-footer>
