--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -87,6 +87,7 @@
   <button mat-menu-item [routerLink]="['/ras']">RAS</button>
   <button mat-menu-item onclick="window.location.href = 'https://csitba.web.app/'">CS</button>
   <button mat-menu-item onclick="window.location.href = 'https://wie-itba.github.io/'">WIE</button>
+  <button mat-menu-item [routerLink]="['/emb']">EMB</button>
 </mat-menu>
 
 <mat-menu #menu="matMenu" xPosition="before" yPosition="below">
